--- a/package.json
+++ b/package.json
@@ -9,15 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@line/bot-sdk": "^9.0.3",
+    "axios": "^1.6.8",
+    "axios-error": "^1.0.4",
+    "crypto": "^1.0.1",
+    "image-type": "^5.2.0",
+    "messaging-api-common": "^1.0.4",
+    "messaging-api-line": "^1.1.0",
+    "next": "13.5.6",
+    "querystring": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.6"
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
+    "ts-invariant": "^0.10.3",
+    "warning": "^4.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^10",
-    "postcss": "^8",
-    "tailwindcss": "^3",
     "eslint": "^8",
-    "eslint-config-next": "13.5.6"
+    "eslint-config-next": "13.5.6",
+    "postcss": "^8",
+    "prisma": "^5.11.0",
+    "tailwindcss": "^3"
   }
 }
